--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,35 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
     <string name="app_name">Alert</string>
     <string name="title_activity_splash">SplashActivity</string>
 
     <string name="transition_morph">morph_transition</string>
+
+
+    <string-array name="alarm_set">
+        <item msgid="5163476010406761625">"Alarm set for 1 minute from now"</item>
+        <item msgid="7110525731259629055">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> from now"</item>
+        <item msgid="7003982794086186185">"Alarm set for <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
+        <item msgid="7311021123230077742">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
+        <item msgid="8431715191823114872">"Alarm set for <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="3244151088673185428">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="3663661342600168814">"Alarm set for <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="7779544127785487304">"Alarm set for <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+    </string-array>
+    <string-array name="alarm_distance">
+        <item msgid="5163476010406761625">"1 minute from now"</item>
+        <item msgid="7110525731259629055">"<xliff:g id="DAYS">%1$s</xliff:g> from now"</item>
+        <item msgid="7003982794086186185">"<xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
+        <item msgid="7311021123230077742">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> from now"</item>
+        <item msgid="8431715191823114872">"<xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="3244151088673185428">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="3663661342600168814">"<xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+        <item msgid="7779544127785487304">"<xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g> from now"</item>
+    </string-array>
+    <string name="day">"1 day"</string>
+    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> days"</string>
+    <string name="hour">"1 hour"</string>
+    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> hours"</string>
+    <string name="minute">"1 minute"</string>
+    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> minutes"</string>
 
 </resources>
